Task_9941:Tab bar
 with '#' will be ignored, and an empty message aborts the commit.

--- a/ios-i-book-lover/Scenes/Storyboard/Base.lproj/Main.storyboard
+++ b/ios-i-book-lover/Scenes/Storyboard/Base.lproj/Main.storyboard
@@ -27,6 +27,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" red="0.52941176469999995" green="0.63921568630000003" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="wjz-La-e0z" kind="relationship" relationship="viewControllers" id="aY9-eG-NJw"/>
