--- a/ios-i-book-lover/Scenes/LaunchingScreen/Base.lproj/LaunchScreen.storyboard
+++ b/ios-i-book-lover/Scenes/LaunchingScreen/Base.lproj/LaunchScreen.storyboard
@@ -24,12 +24,21 @@
                                     <constraint firstAttribute="height" constant="140" id="csA-uc-9jP"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright by Sun*" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Has-Dc-pZg">
+                                <rect key="frame" x="20" y="626" width="335" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="r4Z-ep-z3T" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="0tz-ds-KKN"/>
+                            <constraint firstItem="Has-Dc-pZg" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="5Sm-wt-aaq"/>
                             <constraint firstItem="r4Z-ep-z3T" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="IG4-7k-gXf"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r4Z-ep-z3T" secondAttribute="trailing" constant="20" id="P3u-vY-frS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Has-Dc-pZg" secondAttribute="bottom" constant="20" id="Za5-2C-F6H"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Has-Dc-pZg" secondAttribute="trailing" constant="20" id="pLr-GN-EeY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
