--- a/ios-i-book-lover/Scenes/Storyboard/Home.storyboard
+++ b/ios-i-book-lover/Scenes/Storyboard/Home.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home View Controller-->
+        <!--Book Lover-->
         <scene sceneID="wHP-RM-8mE">
             <objects>
                 <viewController storyboardIdentifier="HomeViewController" id="flr-eK-y5f" customClass="HomeViewController" customModule="BookLover" sceneMemberID="viewController">
@@ -20,7 +20,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="kob-D1-MdV"/>
                     </view>
-                    <navigationItem key="navigationItem" id="tR4-WR-Fcx"/>
+                    <navigationItem key="navigationItem" title="Book Lover" id="tR4-WR-Fcx"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mhw-vr-hJ2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -93,7 +93,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.52941176469999995" green="0.63921568630000003" blue="0.94901960780000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.87843137250000003" green="0.87843137250000003" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="yQq-Al-uIU" firstAttribute="centerY" secondItem="AWx-Tg-K8h" secondAttribute="centerY" id="5ZR-rI-6Y1"/>
                                     <constraint firstItem="KhO-uD-aV9" firstAttribute="leading" secondItem="AWx-Tg-K8h" secondAttribute="leading" constant="30" id="BlY-NM-cG6"/>
